<resources>
    <string name="app_name">MyNoteBook</string>

    <!--    sign in screen ..-->
    <string name="signin_screen_btn_reset">Reset</string>
    <string name="signin_screen_btn_confirm">Confirm</string>
    <string name="signin_screen_enter_login">Enter login</string>
    <string name="signin_screen_enter_password">Enter password</string>
    <string name="signing_screen_login_field_are_empty">Fields are empty - please write your login</string>
    <string name="signin_screen_login">Log In</string>
    <string name="signin_screen_sign_up"><u>Sign Up</u></string>

    <!--    sign up screen ..-->
    <string name="signup_screen_btn_reset">Reset</string>
    <string name="signup_screen_btn_confirm">Sign Up</string>
    <string name="signup_screen_enter_login">Enter login</string>
    <string name="signup_screen_logorpas_empty">Login or pass is empty!!</string>
    <string name="signup_screen_enter_password">Enter password</string>
    <string name="signup_screen_login">Sign Up</string>
    <string name="signup_screen_sign_up">Sign Up</string>

    <!--    detail screen ..-->
    <string name="detail_screen_your_log_data">Your log data</string>
    <string name="detail_screen_your_pass_data">Your pass data</string>
    <string name="detail_screen_fab_refactor">fab refactor</string>
    <string name="detail_screen_detail_screen">Detail screen</string>

    <!--    create screen ..-->
    <string name="create_screen_write_your_data_for_log">Write your data for log</string>
    <string name="create_screen_saved">Saved</string>
    <string name="create_screen_something_wrong">Something went wrong</string>
    <string name="create_screen_write_your_data_for">Write your data for ...</string>
    <string name="create_screen_create_screen">Create screen</string>

    <!--    main screen ..-->
    <string name="main_screen_delete">Delete</string>
    <string name="main_screen_refactor">Edit</string>
    <string name="main_menu_delete_all">Delete all</string>
    <string name="main_screen_remove_notates">Remove all notates</string>
    <string name="main_screen_dialog_are_you_sure">Are you sure?</string>
    <string name="main_screen_dialog_yes">Yes</string>
    <string name="main_screen_dialog_no">No</string>

    <!--    splash screen ..-->
    <string name="splash_screen_splash_screen">Splash screen</string>
    <string name="splash_screen_my_notebook">My \nNoteBook</string>

    <!--    about screen ..-->
    <string name="about_screen_about_app">About App</string>

    <!--    menu-->
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>

    <!--    setting screen ..-->
    <string name="setting_screen_delete_account">Delete account</string>
    <string name="setting_screen_dialog_btn_no">No</string>
    <string name="setting_screen_dialog_btn_yes">Yes</string>
    <string name="setting_screen_dialog_delete_account_title">Remove account</string>
    <string name="setting_screen_dialog_dialog_message">Are you sure !?</string>
    <string name="setting_screen_account">Account</string>

    <!--    another -->
    <string name="nav_draw_menu_about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="repository_deleted_error">Deleted - error</string>
    <string name="repository_deleted_success">Deleted - success</string>
    <string name="saved_success">saved - success</string>
    <string name="log_is_exist">log is exist. please write another log name</string>
    <string name="saved_error">saved - error. something went wrong</string>
    <string name="delete_error_wrong">delete - error. something went wrong</string>
    <string name="user_doesnt_exist">User doesn\'t exist</string>
    <string name="delete_user_wrong">Deleted user login - something went wrong</string>

</resources>