<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="Profile">
        <menu>
            <item
                android:id="@+id/item_menu_login"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/menu_logout" />
        </menu>
    </item>

    <item android:title="Setting">
        <menu>
            <item
                android:id="@+id/item_menu_settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/menu_settings" />
        </menu>
    </item>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/item_menu_about"
                android:icon="@drawable/ic_baseline_emoji_nature_24"
                android:title="@string/nav_draw_menu_about" />

        </menu>

    </item>
</menu>